--- a/docker/template/app/index.html
+++ b/docker/template/app/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>{domain}</title>
+    <title><?php echo $domain; ?></title>
    </head>
    <body>
-      <h1>The {domain} works!</h1>
+      <h1>The <?php echo $domain; ?> works!</h1>
    </body>
 </html>
